End of section 4

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,6 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection":"Data source=datingapp.db"
-  }
-
+  },
+  "TokenKey": "this is use to sign and verify JWT token, super secret unguessable key"
 }
