--- a/.github/workflow/docker-push.yml
+++ b/.github/workflow/docker-push.yml
@@ -25,4 +25,4 @@ jobs:
         with:
           context:"{{defaultContext}}:API"
           push: true
-          tags: hfofana/datingapp_1:latest
+          tags: hfofana/datingapp7:latest
